# lobotomy

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: tests.yaml  validation.yaml
lobotomy/: __init__.py  _exceptions.py  _fio.py  _mocking.py  _mutator.py  _sessions.py  _yaml.py
lobotomy/_cli/: __init__.py  _adder.py  _definitions.py  _parsing.py
lobotomy/_clients/: __init__.py  _casting.py  _definitions.py  _validation.py
lobotomy/_services/: __init__.py  _definitions.py  _formating.py  _formatting.py
lobotomy/_services/_augmentations/: lambda.yaml  s3.yaml
lobotomy/tests/: __init__.py  _support.py  test_callable_responses.py  test_data.py  test_failures.py  test_fio.py  test_mocking.py  test_sessions.py
lobotomy/tests/_data_prefixed/: example.yaml  test_data_prefixed.py
lobotomy/tests/_edge_cases/: test_dynamodb_get_item.py  test_eks_describe_cluster.py  test_generate_presigned_url.py  test_pagination.py  test_s3_select.py  test_s3_select.yaml  test_sqs_delete_message.py
lobotomy/tests/_files/: example.json  test_files.py
lobotomy/tests/_fio/: test_fio.py
lobotomy/tests/_fio/scenarios/empty_sessions_object/: expected.yaml  scenario.yaml
lobotomy/tests/_fio/scenarios/no_change_json/: expected.json
lobotomy/tests/_fio/scenarios/no_change_toml/: expected.toml  scenario.toml
lobotomy/tests/_fio/scenarios/no_change_yaml/: expected.yaml
lobotomy/tests/_fio/scenarios/no_change_yaml_inject_string/: expected.yaml  scenario.yaml  secret_string.json
lobotomy/tests/_fio/scenarios/no_change_yaml_to_json/: scenario.yaml
lobotomy/tests/_fio/scenarios/no_change_yaml_with_classes/: expected.yaml
lobotomy/tests/_fio/scenarios/prefixed_yaml/: expected.yaml  scenario.yaml  settings.yaml
lobotomy/tests/_fio/scenarios/unknown_other_class_removal/: expected.yaml  scenario.yaml  settings.yaml
lobotomy/tests/_yaml/test_boto_error/: scenario.yaml  test_boto_error.py
lobotomy/tests/_yaml/test_inject_string/: body.txt  scenario.yaml  test_inject_string.py
lobotomy/tests/_yaml/test_to_json/: list.yaml  nested.yaml  simple.yaml  test_to_json.py
lobotomy/tests/cli/: __init__.py  test_cli_add.py
lobotomy/tests/edge_cases/: test_ecr_get_authorization_token.py  test_lambda_invoke.py  test_s3_download_file.py  test_s3_upload_file.py  test_timestamp_formats.py
lobotomy/tests/test_data_prefixed/: example.yaml  test_data_prefixed.py
lobotomy/tests/test_files/: example.toml  example.yaml  test_files.py
lobotomy/tests/test_yaml_modifiers/test_inject_string/: scenario.yaml
