[tool.poetry]
name = "lobotomy"
version = "0.1.10"
license = "MIT"
description = "Boto3 low-level client mocking library."
authors = ["Scott Ernst <swernst@gmail.com>"]
readme = "README.md"
homepage = "https://gitlab.com/rocket-boosters/lobotomy"
repository = "https://gitlab.com/rocket-boosters/lobotomy"
documentation = "https://gitlab.com/rocket-boosters/lobotomy"
keywords = ["aws", "boto3", "botocore", "testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
  "Topic :: Software Development :: Testing :: Unit",
  "Topic :: Utilities",
  "Typing :: Typed"
]
exclude = ["lobotomy/tests"]

[tool.poetry.dependencies]
python = "^3.8.0"
boto3 = "^1.16.0"
toml = "^0.10.1"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
mypy = "^0.790"
taskipy = "^1.4.0"

[tool.poetry.scripts]
lobotomy = 'lobotomy:run_cli'

[tool.taskipy.tasks]
# https://github.com/illBeRoy/taskipy
black = "black ."
mypy = "poetry run mypy ./lobotomy/ --ignore-missing-imports"
flake8 = "flake8 ."
test = "pytest . --cov-report=term-missing --cov=."
lint = "task black && task flake8 && task mypy"
check = "task black && task flake8 && task mypy && task test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
